manifests/app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: challenge-meli
  labels:
    name: challenge-meli
    app.kubernetes.io/part-of: challenge-meli
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
