manifests/app/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-meli-api-active
  namespace: challenge-meli
  labels:
    app.kubernetes.io/name: challenge-meli-api
    app.kubernetes.io/component: active
    app.kubernetes.io/part-of: challenge-meli
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: challenge-meli-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 8080
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-meli-api-preview
  namespace: challenge-meli
  labels:
    app.kubernetes.io/name: challenge-meli-api
    app.kubernetes.io/component: preview
    app.kubernetes.io/part-of: challenge-meli
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: challenge-meli-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
